--- a/server/src/processors/CMakeLists.txt
+++ b/server/src/processors/CMakeLists.txt
@@ -3,14 +3,15 @@
 set(OZ_PROCESSORS_SRC_FILES
     ozAVFilter.cpp ozDelayBuffer.cpp ozFaceDetector.cpp ozFilterSwapUV.cpp ozImageConvert.cpp ozImageScale.cpp
     ozImageTimestamper.cpp ozInputFallback.cpp ozMotionDetector.cpp ozMatrixVideo.cpp
-    ozRateLimiter.cpp ozShapeDetector.cpp ozSignalChecker.cpp ozVideoFilter.cpp
+    ozRateLimiter.cpp ozShapeDetector.cpp ozSignalChecker.cpp ozVideoFilter.cpp ozYOLOv3.cpp
+    myIdentityFilter.cpp
    )
 
 
 set(OZ_PROCESSORS_HDR_FILES
     ozAVFilter.h ozDelayBuffer.h ozFaceDetector.h ozFilterSwapUV.h ozImageConvert.h ozImageScale.h
     ozImageTimestamper.h ozInputFallback.h ozMotionDetector.h ozMatrixVideo.h
-    ozRateLimiter.h ozShapeDetector.h ozSignalChecker.h ozVideoFilter.h
+    ozRateLimiter.h ozShapeDetector.h ozSignalChecker.h ozVideoFilter.h ozYOLOv3.h myIdentityFilter.h
    )
 
 if (HAVE_LIBCOPENALPR)
@@ -20,7 +21,12 @@ endif (HAVE_LIBCOPENALPR)
 
 add_library(processors STATIC ${OZ_PROCESSORS_SRC_FILES} ${OZ_PROCESSORS_HDR_FILES})
 
-target_link_libraries(processors ${OZ_EXTRA_LIBS} ${OZ_BIN_LIBS})
+find_library(CUDNN_LIBRARY cudnn HINTS /usr/lib/cuda/lib64/)
+find_library(DARKNET_LIBRARY darknet HINTS /home/starikov/cse576/darknet/)
+target_link_libraries(processors ${OZ_EXTRA_LIBS} ${OZ_BIN_LIBS} "cuda" "cudart" "cublas" "curand" ${CUDNN_LIBRARY} ${DARKNET_LIBRARY})
+
+target_include_directories(processors PRIVATE "/home/starikov/cse576/darknet/include")
+list(APPEND OZ_PROCESSORS_HDR_FILES "/home/starikov/cse576/darknet/include/darknet.h")
 
 install(TARGETS processors DESTINATION "${CMAKE_INSTALL_LIBDIR}/ozonebase/processors")
 install(FILES ${OZ_PROCESSORS_HDR_FILES} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/ozonebase/processors")
