fixed docker build

--- a/server/src/examples/CMakeLists.txt
+++ b/server/src/examples/CMakeLists.txt
@@ -1,5 +1,7 @@
 # CMakeLists.txt for the ozone examples subfolder
 
+link_directories(/usr/local/cuda/lib64 /usr/lib/cuda/lib64)
+
 add_executable(example1 example1.cpp)
 add_executable(example2 example2.cpp)
 add_executable(example3 example3.cpp)
