--- a/server/src/processors/CMakeLists.txt
+++ b/server/src/processors/CMakeLists.txt
@@ -22,11 +22,8 @@ endif (HAVE_LIBCOPENALPR)
 add_library(processors STATIC ${OZ_PROCESSORS_SRC_FILES} ${OZ_PROCESSORS_HDR_FILES})
 
 find_library(CUDNN_LIBRARY cudnn HINTS /usr/lib/cuda/lib64/)
-find_library(DARKNET_LIBRARY darknet HINTS /home/starikov/cse576/darknet/)
+find_library(DARKNET_LIBRARY darknet HINTS /usr/local/lib)
 target_link_libraries(processors ${OZ_EXTRA_LIBS} ${OZ_BIN_LIBS} "cuda" "cudart" "cublas" "curand" ${CUDNN_LIBRARY} ${DARKNET_LIBRARY})
-
-target_include_directories(processors PRIVATE "/home/starikov/cse576/darknet/include")
-list(APPEND OZ_PROCESSORS_HDR_FILES "/home/starikov/cse576/darknet/include/darknet.h")
 
 install(TARGETS processors DESTINATION "${CMAKE_INSTALL_LIBDIR}/ozonebase/processors")
 install(FILES ${OZ_PROCESSORS_HDR_FILES} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/ozonebase/processors")
